<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/home_background">

    <!--        <ImageView-->
    <!--            android:layout_width="match_parent"-->
    <!--            android:layout_height="match_parent"-->
    <!--            android:scaleType="centerCrop"-->
    <!--            android:src="@drawable/glavnaya"-->
    <!--            tools:ignore="ContentDescription" />-->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/glavnaya_b"
        tools:ignore="ContentDescription" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:adSize="BANNER"
        app:adUnitId="@string/reklama_banner"
        app:layout_constraintTop_toTopOf="parent" />

<!--    95F1BA00-->
    <pl.bclogic.pulsator4droid.library.PulsatorLayout
        android:id="@+id/pulsator"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.60"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:pulse_color="#9700BF00"
        app:pulse_count="1"
        app:pulse_duration="7800"
        app:pulse_interpolator="Linear"
        app:pulse_repeat="1"
        app:pulse_startFromScratch="true">

    </pl.bclogic.pulsator4droid.library.PulsatorLayout>

    <!--    <de.hdodenhof.circleimageview.CircleImageView-->
    <!--        android:id="@+id/rozha"-->
    <!--        android:layout_width="0dp"-->
    <!--        android:layout_height="0dp"-->
    <!--        android:layout_marginTop="80dp"-->
    <!--        android:src="@drawable/rozha"-->
    <!--        app:civ_border_color="#FBCFDF"-->
    <!--        app:civ_border_width="2dp"-->
    <!--        app:layout_constraintDimensionRatio="1:1"-->
    <!--        app:layout_constraintEnd_toEndOf="parent"-->
    <!--        app:layout_constraintHeight_percent="0.20"-->
    <!--        app:layout_constraintStart_toStartOf="parent"-->
    <!--        app:layout_constraintTop_toTopOf="parent"-->
    <!--        tools:ignore="ContentDescription" />-->
    <ImageView
        android:id="@+id/rozha"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="80dp"
        android:src="@drawable/rozha"
        app:civ_border_color="#FBCFDF"
        app:civ_border_width="2dp"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/knopkaReyting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="25dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:text="@string/reyting"
        android:textColor="@color/home_action_rate_us"
        android:textSize="11sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_rating"
        app:layout_constraintBottom_toBottomOf="@id/rozha"
        app:layout_constraintEnd_toStartOf="@id/rozha"
        app:layout_constraintTop_toTopOf="@id/rozha"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/knopkaPolicy"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:background="?attr/selectableItemBackground"
        android:drawablePadding="5dp"
        android:gravity="bottom"
        android:text="@string/policy"
        android:textColor="@color/home_action_privacy"
        android:textSize="11sp"
        android:textStyle="bold"
        app:drawableTopCompat="@drawable/ic_privacy_n"
        app:layout_constraintBottom_toBottomOf="@id/rozha"
        app:layout_constraintStart_toEndOf="@id/rozha"
        app:layout_constraintTop_toTopOf="@id/rozha"
        tools:ignore="SmallSp" />

    <TextView
        android:id="@+id/imyaGlavnaya"
        style="@style/TextHomeName"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:autoSizeTextType="uniform"
        android:clickable="false"
        android:fontFamily="@font/comic_kings"
        android:gravity="center"
        android:text="@string/home_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textStyle="normal|bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rozha"
        app:strokeColor="@android:color/transparent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/knopkaVoiceZvonok"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:text="@string/knopka_call"
        app:backgroundTint="@color/home_action_button"
        app:cornerRadius="@dimen/action_button"
        app:icon="@drawable/ikon_zvonok"
        app:iconSize="28dp"
        app:iconTint="@color/home_button_icon_tint"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/imyaGlavnaya" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/knopkaVideoZvonok"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:text="@string/knopka_video_call"
        app:backgroundTint="@color/home_action_button"
        app:cornerRadius="@dimen/action_button"
        app:icon="@drawable/ikon_video"
        app:iconSize="28dp"
        app:iconTint="@color/home_button_icon_tint"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/knopkaVoiceZvonok" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/knopkaOboi"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:text="@string/knopka_wallpapers"
        app:backgroundTint="@color/home_action_button"
        app:cornerRadius="@dimen/action_button"
        app:icon="@drawable/ikon_oboi"
        app:iconSize="28dp"
        app:iconTint="@color/home_button_icon_tint"

        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/knopkaVideoZvonok"
        app:strokeColor="@color/black" />

    <RadioGroup
        android:id="@+id/GruppaTimer"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/knopkaOboi">

        <RadioButton
            android:id="@+id/sec10"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@drawable/radio_flat_selector"
            android:gravity="center"
            android:text="@string/tochka_timer1"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sec30"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@drawable/radio_flat_selector"
            android:gravity="center"
            android:text="@string/tochka_timer2"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/sec60"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@drawable/radio_flat_selector"
            android:button="@drawable/radio_flat_selector"
            android:gravity="center"
            android:text="@string/tochka_timer3"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="20sp" />
    </RadioGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/knopkaTimerZvonok"
        style="@style/ActionButton"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:autoSizeTextType="uniform"
        android:text="@string/knopka_timer_zvonok"
        app:backgroundTint="@color/home_action_button"
        app:icon="@drawable/ikon_vremya"
        app:iconSize="28dp"
        app:iconTint="@color/home_button_icon_tint"
        app:layout_constraintHeight_percent="0.08"
        app:layout_constraintTop_toBottomOf="@id/GruppaTimer" />

</androidx.constraintlayout.widget.ConstraintLayout>